--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "autoprefixer": "^9.8.6",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.2.14",
-    "postcss-cli": "^8.3.1",      
+    "postcss-cli": "^8.3.1",
     "proptypes": "^1.1.0",
     "pure-react-carousel": "^1.27.6",
     "react": "^17.0.2",
@@ -30,13 +30,15 @@
     "web-vitals": "^1.1.1"
   },
   "scripts": {
+    "start": "run-p watch:css react-scripts:start",
+    "build": "run-s build:css react-scripts:build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "setup": "node src/setup.js",
     "build:css": "postcss src/styles/tailwind.css -o src/styles/app.css",
     "watch:css": "postcss src/styles/tailwind.css -o src/styles/app.css --watch",
     "react-scripts:start": "react-scripts start",
-    "start": "run-p watch:css react-scripts:start",
-    "build": "run-s watch:css react-scripts:build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "react-scripts:build": "react-scripts build"
   },
   "eslintConfig": {
     "extends": [
